<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:theme="@android:style/Theme.Dialog"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".AddTask" >

    <GridLayout
        android:id="@+id/add_task_grid"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:columnWidth="90dp"
        android:columnCount="2"
        android:rowCount="2"
        android:verticalSpacing="10dp"
        android:horizontalSpacing="10dp"
        android:stretchMode="columnWidth"
        android:gravity="center" >

        <TextView
            android:text="@string/add_task_name" />

        <EditText
            android:id="@+id/add_task_name"
            android:layout_width="fill_parent"
            android:hint="@string/add_task_name_hint"
            android:inputType="text" />

        <TextView
            android:text="@string/add_task_period" />

        <EditText
            android:id="@+id/add_task_period"
            android:layout_width="fill_parent"
            android:hint="@string/add_task_period_hint"
            android:inputType="number" />

    </GridLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/add_task_grid"
        android:layout_alignParentRight="true"
        android:text="@string/add_task_save"
        android:onClick="saveClicked" />

</RelativeLayout>
